@@ -1,7 +1,6 @@
 // Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.provision.provisioning;
 
-import com.google.common.collect.ImmutableSet;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.Capacity;
@@ -13,19 +12,14 @@ import com.yahoo.vespa.hosted.provision.Node;
 import com.yahoo.vespa.hosted.provision.node.NodeAcl;
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptySet;
-import static java.util.Collections.singleton;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 
@@ -57,11 +51,12 @@ public class AclProvisioningTest {
 
         // Get trusted nodes for the first active node
         Node node = activeNodes.get(0);
+        Node host = node.parentHostname().flatMap(tester.nodeRepository()::getNode).get();
         Supplier<List<NodeAcl>> nodeAcls = () -> tester.nodeRepository().getNodeAcls(node, false);
 
         // Trusted nodes are active nodes in same application, proxy nodes and config servers
-        assertAcls(Arrays.asList(activeNodes, proxyNodes, configServers, dockerHost),
-                   ImmutableSet.of("10.2.3.0/24", "10.4.5.0/24"),
+        assertAcls(List.of(activeNodes, proxyNodes, configServers, List.of(host)),
+                   Set.of("10.2.3.0/24", "10.4.5.0/24"),
                    nodeAcls.get());
     }
 
@@ -82,7 +77,7 @@ public class AclProvisioningTest {
         List<Node> tenantNodes = tester.nodeRepository().getNodes(NodeType.tenant);
 
         // Trusted nodes are all proxy-, config-, and, tenant-nodes
-        assertAcls(Arrays.asList(proxyNodes, configServers, tenantNodes), nodeAcls);
+        assertAcls(List.of(proxyNodes, configServers, tenantNodes), nodeAcls);
     }
 
     @Test
@@ -103,7 +98,7 @@ public class AclProvisioningTest {
         List<NodeAcl> nodeAcls = tester.nodeRepository().getNodeAcls(node, false);
 
         // Trusted nodes is all tenant nodes, all proxy nodes and all config servers
-        assertAcls(Arrays.asList(tenantNodes, proxyNodes, configServers), nodeAcls);
+        assertAcls(List.of(tenantNodes, proxyNodes, configServers), nodeAcls);
     }
 
     @Test
@@ -124,7 +119,7 @@ public class AclProvisioningTest {
         List<NodeAcl> nodeAcls = tester.nodeRepository().getNodeAcls(node, false);
 
         // Trusted nodes is all config servers and all proxy nodes
-        assertAcls(Arrays.asList(proxyNodes, configServers), nodeAcls);
+        assertAcls(List.of(proxyNodes, configServers), nodeAcls);
     }
 
     @Test
@@ -148,7 +143,7 @@ public class AclProvisioningTest {
                     .findFirst()
                     .orElseThrow(() -> new RuntimeException("Expected to find ACL for node " + dockerNode.hostname()));
             assertEquals(dockerHostNodeUnderTest.hostname(), dockerNode.parentHostname().get());
-            assertAcls(Arrays.asList(configServers, dockerNodes), nodeAcl);
+            assertAcls(List.of(configServers, dockerNodes, List.of(dockerHostNodeUnderTest)), nodeAcl);
         }
     }
 
@@ -162,8 +157,8 @@ public class AclProvisioningTest {
 
         // Controllers and hosts all trust each other
         List<NodeAcl> controllerAcls = tester.nodeRepository().getNodeAcls(controllers.get(0), false);
-        assertAcls(Collections.singletonList(controllers), controllerAcls);
-        assertEquals(ImmutableSet.of(22, 4443, 443), controllerAcls.get(0).trustedPorts());
+        assertAcls(List.of(controllers), controllerAcls);
+        assertEquals(Set.of(4443, 443), controllerAcls.get(0).trustedPorts());
     }
 
     @Test
@@ -185,9 +180,9 @@ public class AclProvisioningTest {
 
         assertEquals(3, nodeAcls.get(0).trustedNodes().size());
         Iterator<Node> trustedNodes = nodeAcls.get(0).trustedNodes().iterator();
-        assertEquals(singleton("127.0.1.1"), trustedNodes.next().ipAddresses());
-        assertEquals(singleton("127.0.1.2"), trustedNodes.next().ipAddresses());
-        assertEquals(singleton("127.0.1.3"), trustedNodes.next().ipAddresses());
+        assertEquals(Set.of("127.0.1.1"), trustedNodes.next().ipAddresses());
+        assertEquals(Set.of("127.0.1.2"), trustedNodes.next().ipAddresses());
+        assertEquals(Set.of("127.0.1.3"), trustedNodes.next().ipAddresses());
     }
 
     private List<Node> deploy(int nodeCount) {
@@ -202,7 +197,7 @@ public class AclProvisioningTest {
         ClusterSpec cluster = ClusterSpec.request(ClusterSpec.Type.container, ClusterSpec.Id.from("test"),
                                                   Version.fromString("6.42"), false);
         List<HostSpec> prepared = tester.prepare(application, cluster, capacity, 1);
-        tester.activate(application, new HashSet<>(prepared));
+        tester.activate(application, Set.copyOf(prepared));
         return tester.getNodes(application, Node.State.active).asList();
     }
 
@@ -211,12 +206,12 @@ public class AclProvisioningTest {
     }
 
     private static void assertAcls(List<List<Node>> expectedNodes, List<NodeAcl> actual) {
-        assertAcls(expectedNodes, emptySet(), actual);
+        assertAcls(expectedNodes, Set.of(), actual);
     }
 
     private static void assertAcls(List<List<Node>> expectedNodes, Set<String> expectedNetworks, List<NodeAcl> actual) {
         List<Node> expectedTrustedNodes = expectedNodes.stream()
-                .flatMap(Collection::stream)
+                .flatMap(List::stream)
                 .distinct()
                 .sorted(Comparator.comparing(Node::hostname))
                 .collect(Collectors.toList());
